test/errors/error19.base
This expression has type 'int' but the previous members of the array have type 'real'
fun foo () {
   val x = [1.0, 1];
                 ^
